feat: Integration webpack5

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,13 +1,7 @@
 {
   "short_name": "Galaxy Website",
   "name": "The Galaxy Website",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/svg+xml"
-    }
-  ],
+  "icons": [],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
