--- a/package.json
+++ b/package.json
@@ -19,20 +19,23 @@
     "@types/react-dom": "^17.0.13",
     "@types/react-redux": "^7.1.23",
     "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.8",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
-    "typescript": "^4.6.2",
+    "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "webpack server  --mode development",
+    "prod": "webpack --progress --mode production"
   },
   "eslintConfig": {
     "extends": [
@@ -53,6 +56,11 @@
     ]
   },
   "devDependencies": {
-    "@types/jquery": "^3.5.14"
+    "css-loader": "^6.7.1",
+    "html-webpack-plugin": "^5.5.0",
+    "ts-loader": "^9.2.8",
+    "webpack": "^5.71.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   }
 }
