--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "sourceMap": true,
+    "outDir": "./dist/",
+
+    "noImplicitAny": true,
     "target": "es6",
     "lib": [
       "dom",
