--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,10 @@
     "noFallthroughCasesInSwitch": true,
     "module": "esnext",
     "moduleResolution": "node",
+    "removeComments": true,
     "resolveJsonModule": true,
+    "declaration": false,
+    "pretty": true, 
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx"
