--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "@types/react-redux": "^7.1.23",
+    "@types/recharts": "^1.8.23",
     "axios": "^0.26.1",
     "dotenv": "^16.0.0",
     "moment": "^2.29.2",
@@ -26,6 +27,7 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "recharts": "^2.1.9",
     "redux": "^4.1.2",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
